--- a/README.ja
+++ b/README.ja
@@ -5,7 +5,14 @@
 これは本家の ERMaster では大量のテーブルを扱うと処理が重くなるという問題に対処したものです。
 これにより、100を超えるテーブルを ERMaster でストレス無く管理できるようになりました。
 
+※ 再描画処理が不完全で、一見反映されていないように見えることがあります。そのときはダイアグラムを再選択もしくはermファイルを開き直してください。
+
 使うときは、dropins ディレクトリを Eclipse の直下にコピーして下さい。
+
+
+
+http://ermaster.sourceforge.net/ (本家ERMaster のサイト)
+
 
 
 Naoki Iwami
