--- a/src/org/insightech/er/ERDiagram_ja.properties
+++ b/src/org/insightech/er/ERDiagram_ja.properties
@@ -256,7 +256,7 @@ label.tablespace.size.calculate.1=\uff11\uff0e\u6b21\u306e\u5024\u3092 V$TYPE_SI
 label.tablespace.size.calculate.2=\uff12\uff0e\u6b21\u306e\u5024\u3092 V$PARAMETER\u8868 \u304b\u3089\u53d6\u5f97\u3057\u3066\u304f\u3060\u3055\u3044
 label.tablespace.size.calculate.3=\u5404\u30c6\u30fc\u30d6\u30eb\u306e\u884c\u6570\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 label.tablespace.size.calculated=\u8a08\u7b97\u3055\u308c\u305f\u8868\u9818\u57df\u30b5\u30a4\u30ba
-label.tablespace.size.example=\u4f8b\uff09 10, 10M, 10G 
+label.tablespace.size.example=\u4f8b\uff09 10, 10M, 10G
 label.tablespace.temporary=\u4e00\u6642\u8868\u9818\u57df
 label.tablespace.type=\u30bf\u30a4\u30d7
 label.template=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
@@ -467,6 +467,7 @@ action.title.cut=\u5207\u308a\u53d6\u308a
 action.title.default=\u30c7\u30d5\u30a9\u30eb\u30c8\u306b\u623b\u3059
 action.title.delete=\u524a\u9664&
 action.title.display.capital=\u5927\u6587\u5b57\u3067\u8868\u793a
+action.title.display.titleFontLarge=\u30c6\u30fc\u30d6\u30eb\u30bf\u30a4\u30c8\u30eb\u3092\u5927\u304d\u304f\u8868\u793a
 action.title.display.stamp=\u30b9\u30bf\u30f3\u30d7\u3092\u8868\u793a
 action.title.display.tooltip=\u30c4\u30fc\u30eb\u30c1\u30c3\u30d7
 action.title.edit.all.attributes=\u5168\u5c5e\u6027\u7de8\u96c6
@@ -598,14 +599,14 @@ error.table.physical.name.not.alphabet=\u7269\u7406\u540d\u79f0\u306f\u82f1\u657
 error.tablespace.auto.extend.size.empty=\u81ea\u52d5\u62e1\u5f35\u30b5\u30a4\u30ba\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 error.tablespace.data.file.empty=\u30c7\u30fc\u30bf\u30d5\u30a1\u30a4\u30eb\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 error.tablespace.environment.empty=\u30c6\u30fc\u30d6\u30eb\u30b9\u30da\u30fc\u30b9\u74b0\u5883\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
-error.tablespace.initial.size.empty='Initial Size' \u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044 
+error.tablespace.initial.size.empty='Initial Size' \u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 error.tablespace.location.empty=\u30ed\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 error.tablespace.log.file.group.empty=\u30ed\u30b0\u30d5\u30a1\u30a4\u30eb\u30b0\u30eb\u30fc\u30d7\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 error.tablespace.name.empty=\u8868\u9818\u57df\u540d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 error.tablespace.name.not.alphabet=\u8868\u9818\u57df\u540d\u306f\u82f1\u6570\u5b57\u307e\u305f\u306f_\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 error.tablespace.storage.engine.empty=\u30b9\u30c8\u30ec\u30fc\u30b8\u30a8\u30f3\u30b8\u30f3\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
-error.tablespace.suffix.1=\u8868\u9818\u57df : 
-error.tablespace.suffix.2=, \u74b0\u5883 : 
+error.tablespace.suffix.1=\u8868\u9818\u57df :
+error.tablespace.suffix.2=, \u74b0\u5883 :
 error.template.is.empty=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 error.testdata.name.empty=\u30c6\u30b9\u30c8\u30c7\u30fc\u30bf\u540d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 error.testdata.not.selected=\u51fa\u529b\u3059\u308b\u30c6\u30b9\u30c8\u30c7\u30fc\u30bf\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
@@ -618,23 +619,23 @@ error.trigger.sql.empty=SQL\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u304
 error.unique.key.name.not.alphabet='UNIQUE KEY \u306e\u5236\u7d04\u540d'\u306f\u82f1\u6570\u5b57\u307e\u305f\u306f_\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 error.user.name.is.empty=\u30e6\u30fc\u30b6\u540d\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 error.url.is.empty=JDBC URL \u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
-error.validate.duplicated.column.name1=\u5217\u540d\u304c\u91cd\u8907\u3057\u3066\u3044\u307e\u3059\u3002\u30c6\u30fc\u30d6\u30eb\u540d : 
-error.validate.duplicated.column.name2=, \u5217 : 
-error.validate.duplicated.name=\u30a8\u30f3\u30c6\u30a3\u30c6\u30a3\u30fc\u540d\u304c\u91cd\u8907\u3057\u3066\u3044\u307e\u3059\u3002 : 
+error.validate.duplicated.column.name1=\u5217\u540d\u304c\u91cd\u8907\u3057\u3066\u3044\u307e\u3059\u3002\u30c6\u30fc\u30d6\u30eb\u540d :
+error.validate.duplicated.column.name2=, \u5217 :
+error.validate.duplicated.name=\u30a8\u30f3\u30c6\u30a3\u30c6\u30a3\u30fc\u540d\u304c\u91cd\u8907\u3057\u3066\u3044\u307e\u3059\u3002 :
 error.validate.fulltext.index1=FULLTEXT \u30a4\u30f3\u30c7\u30c3\u30af\u30b9\u306b\u5bfe\u5fdc\u3057\u3066\u3044\u306a\u3044\u30ab\u30e9\u30e0\u304c\u6307\u5b9a\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u30c6\u30fc\u30d6\u30eb\u540d\uff1a
-error.validate.fulltext.index2=, \u30a4\u30f3\u30c7\u30c3\u30af\u30b9 : 
-error.validate.fulltext.index3=, \u5217 : 
-error.validate.no.column=\u5217\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002\u30c6\u30fc\u30d6\u30eb\u540d : 
-error.validate.no.column.name=\u5217\u540d\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002\u30c6\u30fc\u30d6\u30eb\u540d : 
-error.validate.no.column.type1=\u578b\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002\u30c6\u30fc\u30d6\u30eb\u540d : 
-error.validate.no.column.type2=, \u5217 : 
+error.validate.fulltext.index2=, \u30a4\u30f3\u30c7\u30c3\u30af\u30b9 :
+error.validate.fulltext.index3=, \u5217 :
+error.validate.no.column=\u5217\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002\u30c6\u30fc\u30d6\u30eb\u540d :
+error.validate.no.column.name=\u5217\u540d\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002\u30c6\u30fc\u30d6\u30eb\u540d :
+error.validate.no.column.type1=\u578b\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002\u30c6\u30fc\u30d6\u30eb\u540d :
+error.validate.no.column.type2=, \u5217 :
 error.validate.no.table.name=\u30c6\u30fc\u30d6\u30eb\u540d\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002
 error.validate.no.view.name=\u30d3\u30e5\u30fc\u540d\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002
 error.validate.no.view.sql=\u30d3\u30e5\u30fc\u306eSQL\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002
-error.validate.reserved.column.name1=\u30c6\u30fc\u30d6\u30eb\u540d\u306b\u4e88\u7d04\u8a9e\u304c\u4f7f\u308f\u308c\u3066\u3044\u307e\u3059\u3002\u30c6\u30fc\u30d6\u30eb\u540d : 
-error.validate.reserved.column.name2=, \u5217 : 
-error.validate.reserved.table.name=\u30c6\u30fc\u30d6\u30eb\u540d\u306b\u4e88\u7d04\u8a9e\u304c\u4f7f\u308f\u308c\u3066\u3044\u307e\u3059\u3002\u30c6\u30fc\u30d6\u30eb\u540d : 
-error.validate.reserved.view.name=\u30d3\u30e5\u30fc\u540d\u306b\u4e88\u7d04\u8a9e\u304c\u4f7f\u308f\u308c\u3066\u3044\u307e\u3059\u3002\u30d3\u30e5\u30fc\u540d : 
+error.validate.reserved.column.name1=\u30c6\u30fc\u30d6\u30eb\u540d\u306b\u4e88\u7d04\u8a9e\u304c\u4f7f\u308f\u308c\u3066\u3044\u307e\u3059\u3002\u30c6\u30fc\u30d6\u30eb\u540d :
+error.validate.reserved.column.name2=, \u5217 :
+error.validate.reserved.table.name=\u30c6\u30fc\u30d6\u30eb\u540d\u306b\u4e88\u7d04\u8a9e\u304c\u4f7f\u308f\u308c\u3066\u3044\u307e\u3059\u3002\u30c6\u30fc\u30d6\u30eb\u540d :
+error.validate.reserved.view.name=\u30d3\u30e5\u30fc\u540d\u306b\u4e88\u7d04\u8a9e\u304c\u4f7f\u308f\u308c\u3066\u3044\u307e\u3059\u3002\u30d3\u30e5\u30fc\u540d :
 error.validate.reserved.name=\u540d\u524d\u306b\u4e88\u7d04\u8a9e\u304c\u4f7f\u308f\u308c\u3066\u3044\u307e\u3059\u3002
 error.view.name.empty=\u30d3\u30e5\u30fc\u540d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 error.view.name.not.alphabet=\u30d3\u30e5\u30fc\u540d\u306f\u82f1\u6570\u5b57\u307e\u305f\u306f_\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
@@ -718,7 +719,7 @@ html.report.page.title.group=\u30b0\u30eb\u30fc\u30d7
 html.report.page.title.word=\u5358\u8a9e
 html.report.page.title.category=\u30ab\u30c6\u30b4\u30ea
 html.report.frame.warning=\u30d5\u30ec\u30fc\u30e0\u95a2\u9023\u306e\u8b66\u544a
-html.report.frame.warning.text=\u3053\u306e\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306f\u30d5\u30ec\u30fc\u30e0\u6a5f\u80fd\u3092\u4f7f\u3063\u3066\u8868\u793a\u3059\u308b\u3088\u3046\u306b\u4f5c\u3089\u308c\u3066\u3044\u307e\u3059\u3002\r\n\u30d5\u30ec\u30fc\u30e0\u3092\u8868\u793a\u3067\u304d\u306a\u3044 Web \u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u306e\u5834\u5408\u306b\u3053\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u304c\u8868\u793a\u3055\u308c\u307e\u3059\u3002 
+html.report.frame.warning.text=\u3053\u306e\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306f\u30d5\u30ec\u30fc\u30e0\u6a5f\u80fd\u3092\u4f7f\u3063\u3066\u8868\u793a\u3059\u308b\u3088\u3046\u306b\u4f5c\u3089\u308c\u3066\u3044\u307e\u3059\u3002\r\n\u30d5\u30ec\u30fc\u30e0\u3092\u8868\u793a\u3067\u304d\u306a\u3044 Web \u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u306e\u5834\u5408\u306b\u3053\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u304c\u8868\u793a\u3055\u308c\u307e\u3059\u3002
 html.report.link.target=\u30ea\u30f3\u30af\u5148
 html.report.no.frame.version=\u30d5\u30ec\u30fc\u30e0\u306a\u3057\u306e\u30d0\u30fc\u30b8\u30e7\u30f3
 html.report.all.object.type=\u3059\u3079\u3066\u306e\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u30bf\u30a4\u30d7
@@ -733,8 +734,8 @@ html.report.no.frame=\u30d5\u30ec\u30fc\u30e0\u306a\u3057
 html.report.composition.of.document=\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306e\u69cb\u6210
 html.report.composition.of.document.text=\u3053\u306e\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306b\u306f\u3001\u6b21\u306b\u8aac\u660e\u3059\u308b\u30ca\u30d3\u30b2\u30fc\u30b7\u30e7\u30f3\u30d0\u30fc\u306b\u3042\u308b\u9805\u76ee\u306b\u5bfe\u5fdc\u3059\u308b\u30da\u30fc\u30b8\u304c\u542b\u307e\u308c\u307e\u3059\u3002
 html.report.summary.text=\u30da\u30fc\u30b8\u306f\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306e\u30d5\u30ed\u30f3\u30c8\u30da\u30fc\u30b8\u3067\u3001\r\n\u5404\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u30bf\u30a4\u30d7\u306e\u6982\u8981\u3092\u542b\u3080\u5168\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u30bf\u30a4\u30d7\u306e\u4e00\u89a7\u304c\u8868\u793a\u3055\u308c\u307e\u3059\u3002\r\n\u4e00\u9023\u306e\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u30bf\u30a4\u30d7\u306e\u6982\u8981\u8aac\u660e\u3082\u8868\u793a\u3055\u308c\u307e\u3059\u3002
-html.report.object.type.text=\u5404\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u30bf\u30a4\u30d7\u306f\u3001\u305d\u306e\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u30bf\u30a4\u30d7\u306e\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u3078\u306e\u30ea\u30f3\u30af\u3092\u542b\u3080\u30da\u30fc\u30b8\u3092\u6301\u3061\u307e\u3059\u3002\r\n\u3053\u306e\u30da\u30fc\u30b8\u306f\u6b21\u306e\u30bf\u30a4\u30d7\u3067\u69cb\u6210\u3055\u308c\u307e\u3059 : 
-html.report.object.text=\u5404\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u306f\u500b\u5225\u306e\u30da\u30fc\u30b8\u3092\u6301\u3061\u307e\u3059\u3002\r\n\u5404\u30da\u30fc\u30b8\u306b\u306f\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u306e\u8a73\u7d30\u60c5\u5831\u304c\u542b\u307e\u308c\u307e\u3059\u3002  
+html.report.object.type.text=\u5404\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u30bf\u30a4\u30d7\u306f\u3001\u305d\u306e\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u30bf\u30a4\u30d7\u306e\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u3078\u306e\u30ea\u30f3\u30af\u3092\u542b\u3080\u30da\u30fc\u30b8\u3092\u6301\u3061\u307e\u3059\u3002\r\n\u3053\u306e\u30da\u30fc\u30b8\u306f\u6b21\u306e\u30bf\u30a4\u30d7\u3067\u69cb\u6210\u3055\u308c\u307e\u3059 :
+html.report.object.text=\u5404\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u306f\u500b\u5225\u306e\u30da\u30fc\u30b8\u3092\u6301\u3061\u307e\u3059\u3002\r\n\u5404\u30da\u30fc\u30b8\u306b\u306f\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u306e\u8a73\u7d30\u60c5\u5831\u304c\u542b\u307e\u308c\u307e\u3059\u3002
 html.report.prev=\u524d
 html.report.next=\u6b21
 html.report.prev.text=\u3053\u308c\u3089\u306e\u30ea\u30f3\u30af\u306b\u3088\u308a\u3001\u524d\u307e\u305f\u306f\u6b21\u306e\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u30bf\u30a4\u30d7\u3001\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u3078\u79fb\u52d5\u3067\u304d\u307e\u3059\u3002
@@ -768,7 +769,7 @@ html.report.order=\u6607\u9806/\u964d\u9806
 
 java.template.class.description=@LogicalTableName \u30e2\u30c7\u30eb\u30af\u30e9\u30b9
 java.template.composite.id.class.description=@LogicalTableName composite-id \u30af\u30e9\u30b9
-java.template.composite.id.property.description=@LogicalTableName composite-id 
+java.template.composite.id.property.description=@LogicalTableName composite-id
 java.template.constructor=\u30b3\u30f3\u30b9\u30c8\u30e9\u30af\u30bf
 java.template.getter.description=@logicalColumnName \u3092\u53d6\u5f97\u3057\u307e\u3059
 java.template.set.adder.description=@logicalColumnName \u3092\u8ffd\u52a0\u3057\u307e\u3059
