--- a/src/org/insightech/er/ERDiagram_ja.properties
+++ b/src/org/insightech/er/ERDiagram_ja.properties
@@ -436,6 +436,7 @@ dialog.title.trigger=\u30c8\u30ea\u30ac\u30fc\u60c5\u5831
 dialog.title.view=\u30d3\u30e5\u30fc\u60c5\u5831
 dialog.title.warning=\u6ce8\u610f
 dialog.title.word=\u5358\u8a9e\u60c5\u5831
+dialog.title.edit.excel=\u30de\u30b9\u30bf\u30c7\u30fc\u30bfExcel\u7de8\u96c6
 
 action.title.auto.resize=\u30b5\u30a4\u30ba\u306e\u81ea\u52d5\u8abf\u6574
 action.title.category.manage=\u30ab\u30c6\u30b4\u30ea\u7ba1\u7406
@@ -510,6 +511,7 @@ action.title.zoom.adjust=\u30ba\u30fc\u30e0\u8abf\u6574
 
 action.title.ermodel.manage=\u30c0\u30a4\u30a2\u30b0\u30e9\u30e0\u7ba1\u7406
 action.title.ermodel.add=\u30c0\u30a4\u30a2\u30b0\u30e9\u30e0\u4f5c\u6210
+action.title.ermodel.outline=Quick Outline
 action.title.ermodel.place.table=\u30c6\u30fc\u30d6\u30eb\u914d\u7f6e
 action.title.change.name=\u540d\u524d\u5909\u66f4
 action.title.mainColumn=\u30e1\u30a4\u30f3\u5217\u306e\u307f\u8868\u793a
